catalog/elk/kubernetes/cerebro/cerebro-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cerebro
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: elk
        component: cerebro
        role: management
        release: stable      # stable, canary, alpha, beta, experimental, latest, debug
        environment: dev     # dev, staging, qa, production
        partition: all       # customer_1, customer_2, developer_1, beta_release
    spec:
      containers:
      - name: cerebro
        imagePullPolicy: Always # IfNotPresent, Always, Never
        image: yannart/cerebro:0.6.1
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 200Mi
        ports:
          - name: http
            containerPort: 9000
        volumeMounts:
        - mountPath: /opt/cerebro/conf
          name: cerebro-conf
      - name: oauth2-proxy
        image: a5huynh/oauth2_proxy # https://github.com/bitly/oauth2_proxy
        args:
          - "-upstream=http://localhost:9000/"
          - "-http-address=0.0.0.0:4180"
          - "-config=/etc/oauth2_proxy/config/oauth2_proxy.cfg"
        ports:
          - name: http
            containerPort: 4180
        volumeMounts:
        - mountPath: /etc/oauth2_proxy/config
          name: oauth2-proxy
        - mountPath: /etc/oauth2_proxy/passwords
          name: htpasswd
      volumes:
      - name: cerebro-conf
        configMap:
          name: cerebro
          items:
            - key: application.conf
              path: application.conf
      - name: oauth2-proxy
        configMap:
          name: cerebro-oauth
          items:
            - key: oauth2_proxy.cfg
              path: oauth2_proxy.cfg
      - name: htpasswd
        secret:
          secretName: cerebro-oauth-google
          items:
          - key: htpasswd
            path: .htpasswd
            mode: 0644
