catalog/elk/kubernetes/cerebro/cerebro-service.minikube.yaml
apiVersion: v1
kind: Service
metadata:
  name: cerebro
  labels:
    app: elk
    component: cerebro
    role: load-balancer
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
spec:
  type: NodePort
  selector:
    app: elk
    component: cerebro
  ports:
  - port: 9000
    name: http        # use   https   if you use an SSL Cert managed by AWS
    nodePort: 32001
    protocol: TCP
