catalog/elk/kubernetes/cerebro/cerebro-ingress.minikube.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cerebro
  labels:
    app: elk
    component: cerebro
    role: cerebro-ingress
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: cerebro.cluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: cerebro
          servicePort: 9000
